feat: 1. tool-xxx-stdout和工具执行卡片UI融合成一个UI，调整定义、开发处理逻辑和全局替换逻辑 2. 会话列表的详细数据定义增加一个字段，标识属于自由对话还是任务规划 3. 修复工具执行卡片颜色样式问题

--- a/app/renderer/src/main/src/pages/ai-agent/components/ToolInvokerCard.module.scss
+++ b/app/renderer/src/main/src/pages/ai-agent/components/ToolInvokerCard.module.scss
@@ -33,7 +33,7 @@
         --title-bg-color: var(--Colors-Use-Success-Focus);
         --content-color: var(--Colors-Use-Neutral-Text-4-Help-text);
     }
-    &-fail {
+    &-failed {
         --title-bg-color: var(--Colors-Use-Error-Focus);
         --content-color: var(--Colors-Use-Error-Primary);
     }
