feat: 漏洞与风险关联包展示

--- a/app/renderer/src/main/src/pages/risks/YakitRiskTable/YakitRiskTable.module.scss
+++ b/app/renderer/src/main/src/pages/risks/YakitRiskTable/YakitRiskTable.module.scss
@@ -362,6 +362,7 @@ $keyColor: map-keys($tagColor);
     overflow: hidden;
     &-heard {
         @extend %display-flex-center;
+        gap: 8px;
     }
 }
 .content-resize-second {
